2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Silence XEmacs w3 warning.

	* gravatar.el (gravatar-retrieve-synchronously): XEmacs also has
	`url-retrieve-synchronously', apparently.

	* dgnushack.el: Silence XEmacs dns.el warning.

	* gnus-compat.el (gnus-compat): Declare `declare-function' only here
	instead of in all files.

	* dns.el (network-interface-list): Define for XEmacs.

	* gnus-notifications.el (gravatar-retrieve-synchronously): Declare for
	XEmacs.

	* nnrss.el (libxml-parse-html-region): Silence compilation error.

2014-02-01  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* gnus-mlspl.el (gnus-group-split-fancy): Use `gnus-parameters' in
	`gnus-group-split-fancy'.

2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-remove-header): Doc fix.
	(message-forward-included-headers): New variable.
	(message-remove-ignored-headers): Use it.

2014-01-31  Dave Abrahams  <dave@boostpro.com>

	* gnus-sum.el (gnus-summary-open-group-with-article): New command.

2014-01-31  Magnus Henoch  <magnus.henoch@gmail.com>

	* dns.el (dns-servers-up-to-date-p): New function to see whether the
	network interfaces changed.
	(dns-query): Use it to flush the data.

2013-09-04  Rasmus Pank Roulund  <emacs@pank.eu>

	* gnus-fun.el (gnus-x-face-omit-files): Regexp to omit matched results
	from random face commands.
	(gnus-face-directory): Like `gnus-x-face-directory` for png files and
	Face.
	(gnus-face-omit-files): Like `gnus-x-face-omit-files` for Face.
	(gnus--random-face-with-type): Generic function returning a face-type
	as a string.
	(gnus--insert-random-face-with-type): Generic function inserting a face
	in a message buffer header.
	(gnus-random-x-face): Rewritten to use `gnus--random-face-with-type`.
	(gnus-insert-random-x-face-header): Rewritten to use
	`gnus--insert-random-face-with-type`.
	(gnus-random-face): Return random (png) Face as string.
	(nus-insert-random-face-header): Insert random (png) Face in a message
	buffer.
